--- a/05-Flask/aj/templates/booking.html
+++ b/05-Flask/aj/templates/booking.html
@@ -24,8 +24,8 @@
         <div class="house-info">
             <img src="/static/images/home01.jpg">
             <div class="house-text">
-                <h3>房屋标题</h3>
-                <p>￥<span>300</span>/晚</p>
+                <h3 class="aaa1">房屋标题</h3>
+                <p>￥<span class="aaa2">300</span>/晚</p>
             </div>
         </div>
         <div class="select-date">
@@ -38,7 +38,7 @@
         </div>
         <div class="submit-order">
             <span class="order-amount">订单总额：￥<span></span></span>
-            <span class="submit-btn">提交订单</span>
+            <span class="submit-btn" onclick="submit_form()">提交订单</span>
         </div>
     </div>
     <div class="popup_con">
