--- a/05-Flask/aj/templates/newhouse.html
+++ b/05-Flask/aj/templates/newhouse.html
@@ -5,24 +5,23 @@
 {% block etxCSS %}
     {{ super() }}
     <link href="/static/css/ihome/newhouse.css" rel="stylesheet">
-
 {% endblock %}
 
 {% block etxJS %}
     {{ super() }}
     <script src="/static/js/ihome/newhouse.js"></script>
-
 {% endblock %}
 {% block content %}
     <div class="container">
         <div class="top-bar">
             <div class="nav-bar">
                 <h3 class="page-title">发布新房源</h3>
-                <a class="nav-btn fl" href="/myhouse.html"><span><i class="fa fa-angle-left fa-2x"></i></span></a>
+                <a class="nav-btn fl" href="{{ url_for('house.my_house') }}"><span><i class="fa fa-angle-left fa-2x"></i></span></a>
             </div>
         </div>
         <div class="houses-con">
         <ul class="houses-list">
+
             <form id="form-house-info">
                 <li>
                     <div class="house-title">
@@ -102,8 +101,11 @@
                 <input type="submit" class="btn btn-success btn-commit" value="发布房源信息">
                 <div class="error-msg text-center"><i class="fa fa-exclamation-circle"></i>请将全部信息填写完整后再提交</div>
             </form>
-            <form id="form-house-image" action="/api/house/image" method="post" enctype="multipart/form-data">
-                <input type="hidden" name="house_id" id="house-id" value="">
+
+
+
+            <form id="form-house-image" enctype="multipart/form-data">
+                <input type="hidden" name="house_id" id="house-id" value="14">
                 <li>
                     <div class="house-title">
                         <h3>添加图片</h3>
@@ -113,12 +115,15 @@
                         </div>
                         <div class="form-group">
                             <label for="house-image">选择图片</label>
-                            <input type="file" accept="image/*" name="house_image" id="house-image">
+                            <input type="file" name="house_image" id="house-image">
                         </div>
-                        <input type="submit" class="btn btn-success" value="上传">
+                        <input type="submit" onclick="uploadHouseImage();"
+                               class="btn btn-success" value="上传">
                     </div>
                 </li>
             </form>
+
+
         </ul>
         </div>
         <div class="popup_con">
