--- a/05-Flask/aj/templates/search.html
+++ b/05-Flask/aj/templates/search.html
@@ -18,7 +18,8 @@
         <div class="top-bar">
             <div class="nav-bar">
                 <h3 class="page-title">房 源</h3>
-                <a class="nav-btn fl" href="/"><span><i class="fa fa-angle-left fa-2x"></i></span></a>
+                <a class="nav-btn fl" href="javascript:;" onclick="goBack()"><span>
+                    <i class="fa fa-angle-left fa-2x"></i></span></a>
             </div>
             <ul class="filter-title-bar">
                 <li class="filter-title">
@@ -45,23 +46,19 @@
                     </div>
                 </div>
                 <ul class="filter-item filter-area">
-                    <li area-id="1">东城区</li>
-                    <li area-id="2">西城区</li>
-                    <li area-id="3">朝阳区</li>
-                    <li area-id="4">海淀区</li>
-                    <li area-id="5">昌平区</li>
-                    <li area-id="6">丰台区</li>
-                    <li area-id="7">房山区</li>
-                    <li area-id="8">通州区</li>
-                    <li area-id="9">顺义区</li>
-                    <li area-id="10">大兴区</li>
-                    <li area-id="11">怀柔区</li>
-                    <li area-id="12">平谷区</li>
-                    <li area-id="13">密云区</li>
-                    <li area-id="14">延庆区</li>
-                    <li area-id="15">石景山区</li>
-                    <li area-id="16">门头沟区</li>
+
                 </ul>
+
+
+                {% raw %}
+                    <script type="text/html" id="area-list-tmpl">
+                        {{ each areas as area }}
+                    <li area-id="{{ area.id }}">{{ area.name }}</li>
+                        {{ /each }}
+                    </script>
+                {% endraw %}
+
+
                 <ul class="filter-item filter-sort">
                     <li class="active" sort-key="new">最新上线</li>
                     <li sort-key="booking">入住最多</li>
@@ -72,39 +69,26 @@
         </div>
         <div class="display-mask"></div>
         <ul class="house-list">
-            <li class="house-item">
-                <a href="/detail.html?id=1"><img src="/static/images/home01.jpg"></a>
+
+        {% raw %}
+            <script type="text/html" id="house-list-tmpl">
+            {{ each houses as house }}
+             <li class="house-item">
+                <a href=""><img src="/static/{{ house.image }}"></a>
                 <div class="house-desc">
-                    <div class="landlord-pic"><img src="/static/images/landlord01.jgp"></div>
-                    <div class="house-price">￥<span>200</span>/晚</div>
+                    <div class="landlord-pic"><img src="/static/images/landlord01.jpg"></div>
+                    <div class="house-price">￥<span>{{ house.price }}</span>/晚</div>
                     <div class="house-intro">
-                        <span class="house-title">房屋标题1</span>
-                        <em>出租6间 - 1次入住 - 中关村软件园</em>
+                        <span class="house-title">{{ house.title }}</span>
+                        <em>出租{{ house.room }}间 - 1次入住 - {{ house.area }}</em>
                     </div>
                 </div>
             </li>
-            <li class="house-item">
-                <a href="/detail.html?id=1"><img src="/static/images/home01.jpg"></a>
-                <div class="house-desc">
-                    <div class="landlord-pic"><img src="/static/images/landlord01.jgp"></div>
-                    <div class="house-price">￥<span>200</span>/晚</div>
-                    <div class="house-intro">
-                        <span class="house-title">房屋标题1</span>
-                        <em>出租6间 - 1次入住 - 中关村软件园</em>
-                    </div>
-                </div>
-            </li>
-            <li class="house-item">
-                <a href="/detail.html?id=1"><img src="/static/images/home01.jpg"></a>
-                <div class="house-desc">
-                    <div class="landlord-pic"><img src="/static/images/landlord01.jgp"></div>
-                    <div class="house-price">￥<span>200</span>/晚</div>
-                    <div class="house-intro">
-                        <span class="house-title">房屋标题1</span>
-                        <em>出租6间 - 1次入住 - 中关村软件园</em>
-                    </div>
-                </div>
-            </li>
+                {{ /each }}
+            </script>
+
+{% endraw %}
+
         </ul>
         <div class="footer">
             <p><span><i class="fa fa-copyright"></i></span>爱家租房&nbsp;&nbsp;享受家的温馨</p>
